aptosid-settings-desktop (20241218.3) UNRELEASED; urgency=medium

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 19 Dec 2024 04:57:35 +0100

aptosid-settings-desktop (20241218.2) unstable; urgency=medium

  * aptosid-settings-xfce: use /etx/xdg/autostart to trigger
    one-time configuration of XFCE on first login.
  * Add Recommends on arc-theme, bibata-cursor-theme and fonts-noto
    to all gtk-based desktops.
  * Demote aptosid-settings-qt-gtk to Recommends.

 -- Kel Modderman <kelvmod@gmail.com>  Wed, 18 Dec 2024 19:51:06 +1000

aptosid-settings-desktop (20241218.1) unstable; urgency=medium

  * setup_xfce4: configure xfwm4 theme and title font.

 -- Kel Modderman <kelvmod@gmail.com>  Wed, 18 Dec 2024 15:48:24 +1000

aptosid-settings-desktop (20241217.2) unstable; urgency=medium

  * aptosid-settings-xfce: set font and cursor defaults.

 -- Kel Modderman <kelvmod@gmail.com>  Tue, 17 Dec 2024 22:16:08 +1000

aptosid-settings-desktop (20241217.1) unstable; urgency=medium

  * aptosid-settings-xfce: add depends on aptosid-settings-qt-gtk.
  * aptosid-settings-xfce: add xfce4-desktop.xml defaults.

 -- Kel Modderman <kelvmod@gmail.com>  Tue, 17 Dec 2024 21:57:34 +1000

aptosid-settings-desktop (20241216.3) unstable; urgency=medium

  * xfce4: defer wallpaper configuration to /etc/xdg/autostart script.

 -- Kel Modderman <kelvmod@gmail.com>  Mon, 16 Dec 2024 23:04:59 +1000

aptosid-settings-desktop (20241216.2) unstable; urgency=medium

  * Provide setup_xfce4 script in an attempt to set some defaults.

 -- Kel Modderman <kelvmod@gmail.com>  Mon, 16 Dec 2024 23:04:14 +1000

aptosid-settings-desktop (20241216.1) unstable; urgency=medium

  * gnome.gschema.override: set icon, gtk theme and accent color.
  * Set picture-options='zoom' universally when setting background.
  * Reinstate QT_QPA_PLATFORMTHEME=gtk2.

 -- Kel Modderman <kelvmod@gmail.com>  Mon, 16 Dec 2024 17:24:27 +1000

aptosid-settings-desktop (20241215.2) unstable; urgency=medium
