@@ -1,0 +1,1 @@
+rm_conffile /etc/skel/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-desktop.xml
