@@ -1,25 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<channel name="xfce4-desktop" version="1.0">
-  <property name="backdrop" type="empty">
-    <property name="screen0" type="empty">
-      <property name="monitor0" type="empty">
-        <property name="image-path" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="last-image" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="last-single-image" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="image-style" type="int" value="5"/>
-      </property>
-      <property name="monitor1" type="empty">
-        <property name="image-path" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="last-image" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="last-single-image" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="image-style" type="int" value="5"/>
-      </property>
-      <property name="monitor2" type="empty">
-        <property name="image-path" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="last-image" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="last-single-image" type="string" value="/usr/share/wallpapers/aptosid-nemesis-wide.png"/>
-        <property name="image-style" type="int" value="5"/>
-      </property>
-    </property>
-  </property>
-</channel>
