@@ -1,53 +1,0 @@
-#!/bin/sh
-
-[ -x "$(which xfconf-query)" ] || exit 0
-
-xfconf-query --create --channel xfce4-power-manager \
-	--property /xfce4-power-manager/show-tray-icon --type bool --set true
-
-xfconf-query --create --channel xfce4-session \
-	--property /general/SaveOnExit --type bool --set false
-
-xfconf-query --create --channel xfce4-session \
-	--property /general/AutoSave --type bool --set false
-
-xfconf-query --create --channel xsettings \
-	--property /Net/IconThemeName --type string --set 'Mint-Y-Blue'
-
-xfconf-query --create --channel xsettings \
-	--property /Net/ThemeName --type string --set 'Arc-Dark'
-
-xfconf-query --create --channel xfwm4 \
-	--property /general/theme --type string --set 'Arc-Dark'
-
-xfconf-query --create --channel xfwm4 \
-	--property /general/title_font --type string --set 'Noto Sans Bold 11'
-
-xfconf-query --create --channel xsettings \
-	--property /Net/FontName --type string --set 'Noto Sans 11'
-
-xfconf-query --create --channel xsettings \
-	--property /Net/MonospaceFontName --type string --set 'Noto Mono 11'
-
-xfconf-query --create --channel xsettings \
-	--property /Gtk/CursorThemeName --type string --set 'Bibata-Modern-Ice'
-
-xfconf-query --create --channel xfce4-panel \
-	--property /plugins/plugin-12/digital-layout --type int --set 3
-
-xfconf-query --create --channel xfce4-panel \
-	--property /plugins/plugin-12/digital-time-font --type string \
-	--set 'Noto Sans 11'
-
-xfconf-query --create --channel xfce4-panel \
-	--property /plugins/plugin-18/items --type string \
-	--set /usr/share/applications/xfce-settings-manager.desktop -a
-
-xfconf-query --create --channel xfce4-panel \
-	--property /plugins/plugin-19/items --type string \
-	--set /usr/share/applications/aptosid/xdg-browser-launcher.desktop -a
-
-# override and disable /etc/xdg/autostart/aptosid-settings-xfce.desktop
-mkdir -p ~/.config/autostart
-cp /etc/xdg/autostart/aptosid-settings-xfce.desktop ~/.config/autostart
-echo 'Hidden=true' >> ~/.config/autostart/aptosid-settings-xfce.desktop
